--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     /* height: 800px;
     max-width: 100%; */
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-image: url("pattern.png");
     background-size: cover;
 }
